<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/arkaplan"
    >

     <Button
         android:id="@+id/btn_seyahat_olusturan"
         style="@style/AppBaseTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/btn_Iptal_Seyahat"
         android:text="@string/seyahat_ayril"
         android:textColor="@color/Beyaz" />

     <Button
         android:id="@+id/btn_Iptal_Seyahat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tx_bulsnokt"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/iptal"
         android:textColor="@color/Beyaz" />

     <TextView
         android:id="@+id/TextView03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/btn_seyahat_katilan"
         android:text="@string/seyahat_dahilolanlar"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Beyaz" />

     <Button
         android:id="@+id/button4"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TextView03" />

     <TextView
         android:id="@+id/tv_NameSurname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/bslangc_nokt"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Beyaz" />

     <EditText
         android:id="@+id/tx_baslnokt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_NameSurname"
         android:background="@drawable/textview_border_sari"
         android:ems="10"
         android:enabled="false"
         android:inputType="none"
         android:textColor="@color/Bej" />

     <EditText
         android:id="@+id/tx_varisnok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TextView01"
         android:background="@drawable/textview_border_sari"
         android:ems="10"
         android:enabled="false"
         android:inputType="none"
         android:textColor="@color/Bej" />

     <EditText
         android:id="@+id/tx_bulsnokt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TextView04"
         android:background="@drawable/textview_border_sari"
         android:ems="10"
         android:enabled="false"
         android:inputType="none"
         android:textColor="@color/Bej" />

     <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tx_baslnokt"
         android:layout_marginTop="16dp"
         android:text="@string/varis_Nokt"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Beyaz" />

     <TextView
         android:id="@+id/TextView04"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tx_varisnok"
         android:layout_marginTop="22dp"
         android:text="@string/bulusma_nokt"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Beyaz" />

     <TextView
         android:id="@+id/TextView02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tx_bulsnokt"
         android:layout_marginTop="14dp"
         android:layout_toLeftOf="@+id/tx_bassaati"
         android:text="@string/baslangic_saati"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/Beyaz" />

     <Button
         android:id="@+id/btn_seyahat_katilan"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tx_bassaati"
         android:layout_marginTop="19dp"
         android:text="@string/seyehatkatil"
         android:textColor="@color/Beyaz" />

     <EditText
         android:id="@+id/tx_bassaati"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/TextView02"
         android:layout_alignBottom="@+id/TextView02"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/tv_NameSurname"
         android:background="@drawable/textview_border_sari"
         android:ems="10"
         android:enabled="false"
         android:inputType="time"
         android:textColor="@color/Bej" >

         <requestFocus />
     </EditText>

     <ListView
         android:id="@+id/lstviewTalepEden"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btn_Iptal_Seyahat"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/button4"
         android:clickable="false"
         android:longClickable="false" >

     </ListView>

     <TextView
         android:id="@+id/btnmsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="mesaj"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/Beyaz"
         android:textSize="13dp" />

</RelativeLayout>